--- a/scss/style.scss
+++ b/scss/style.scss
@@ -35,6 +35,7 @@
 @import "patterns/_governance";
 @import "patterns/_keyfigures";
 @import "patterns/_activities";
+@import "patterns/_alliiances";
 
 //Pages
 @import "pages/_404";
