--- a/scss/patterns/_governance.scss
+++ b/scss/patterns/_governance.scss
@@ -43,17 +43,17 @@
         }
       }
     }
-    .tabs-container{
-      .tabs-panel{
-        &:last-child{
-          display: none;
-        }
-      }
-    }
   }
 }
 .sub-content {
   margin-left: 80px;
   width: 100%;
   max-width: calc(100% - 487px);
+}
+.tabs-container{
+  .tabs-panel{
+    &:not(:first-child){
+      display: none;
+    }
+  }
 }
