--- a/scss/patterns/_video.scss
+++ b/scss/patterns/_video.scss
@@ -12,7 +12,7 @@
   width: 100%;
   max-width: 487px;
   background: $white;
-  padding:70px 80px;
+  padding:65px 55px 30px 80px;
   h2{
     font-family: $font-bold;
     color: $navy-blue;
@@ -54,6 +54,7 @@
   &.wrapper{
     .container{
       @include display-flex();
+      margin:0 43px;
     }
   }
 
