--- a/scss/style.scss
+++ b/scss/style.scss
@@ -36,6 +36,7 @@
 @import "patterns/_keyfigures";
 @import "patterns/_activities";
 @import "patterns/_alliiances";
+@import "patterns/_awards";
 
 //Pages
 @import "pages/_404";
