--- a/scss/patterns/_alliiances.scss
+++ b/scss/patterns/_alliiances.scss
@@ -24,7 +24,7 @@
           background: #d1eb94;
           width: 100%;
           max-width: calc(100% - 505px);
-          padding:45px;
+          padding:45px 40px;
           display: flex;
           flex-direction: column;
           .alliance-single-key{
@@ -49,9 +49,30 @@
           }
           .alliance-single-legend{
             text-align: center;
-            font-size: 17px;
+            font-size: 18px;
             font-family: $font-medium;
             color:$navy-blue;
+            margin-bottom:30px;
+          }
+          .alliance-image{
+            text-align: center;
+            margin-bottom: 26px;
+            img{
+              max-width: 100%;
+            }
+          }
+          .alliance-short-text{
+            padding-top: 30px;
+            position: relative;
+            &:before{
+              content:"";
+              width: calc(100% + 20px);
+              height:1px;
+              background: $white;
+              position: absolute;
+              left:-10px;
+              top:0;
+            }
           }
         }
       }
