--- a/scss/patterns/_global.scss
+++ b/scss/patterns/_global.scss
@@ -162,7 +162,11 @@ h2{
   .read{
    margin-bottom: 0;
    padding:5px 0 5px 25px;
-   background: $color-readmore;
+   background: rgba($color-readmore, 0.33);
+   transition:all 1s ease;
+   &:hover{
+    background: $color-readmore;
+   }
   }
   .read__more{
    display: block;
@@ -180,8 +184,25 @@ h2{
     background: $white;
    }
   }
+  &:hover{
+   .read{
+    background: $color-readmore;
+   }
+   .read__more{
+    padding-left: 52px;
+    &:before{
+     left:27px;
+    }
+    &:after{
+     left:0;
+    }
+   }
+  }
  }
  &:last-child{
   margin-bottom: 0;
  }
+}
+.reveal{
+ display: none;
 }
