--- a/scss/patterns/_governance.scss
+++ b/scss/patterns/_governance.scss
@@ -14,6 +14,7 @@
       .item{
         width: calc(100% / 3 - 16px);
         margin:8px;
+        height: 140px;
         .title{
           font-size: 15px;
           font-family: $font-bold;
@@ -40,6 +41,9 @@
             bottom:0;
             z-index: 3;
           }
+        }
+        .reveal{
+          display: none;
         }
       }
     }
