--- a/scss/patterns/_video.scss
+++ b/scss/patterns/_video.scss
@@ -25,6 +25,7 @@
         padding-bottom: 16px;
         border-top:3px solid rgba($color-readmore, .33);
         width: 100%;
+        display: block;
         &:hover, &.is-active{
           border-top:3px solid $navy-blue;
           padding-left: 52px;
