update complexe page

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -37,6 +37,7 @@
 @import "patterns/_activities";
 @import "patterns/_alliiances";
 @import "patterns/_awards";
+@import "patterns/_sage";
 
 //Pages
 @import "pages/_404";
