--- a/scss/patterns/_keyfigures.scss
+++ b/scss/patterns/_keyfigures.scss
@@ -1,5 +1,8 @@
 .keyfigures {
   padding:60px 0;
+  .sidebar{
+    border-top: 6px solid #d41923;
+  }
   .sub-content{
     color: $white;
     position: relative;
