--- a/scss/patterns/_video.scss
+++ b/scss/patterns/_video.scss
@@ -13,6 +13,7 @@
   max-width: 487px;
   background: $white;
   padding:65px 55px 30px 80px;
+  border-top: 6px solid #d2d944;
   h2{
     font-family: $font-bold;
     color: $navy-blue;
