--- a/scss/style.scss
+++ b/scss/style.scss
@@ -14,6 +14,7 @@
 @import "components/_utility";
 
 //Main websites patterns
+@import "patterns/_fancybox";
 @import "patterns/_font";
 @import "patterns/_anim";
 @import "patterns/_breadcrumb";
