--- a/scss/patterns/_alliiances.scss
+++ b/scss/patterns/_alliiances.scss
@@ -1,5 +1,8 @@
 .alliances{
   padding:152px 0;
+  .sidebar{
+    border-top: 6px solid #acc432;
+  }
   &-list{
     .alliance-item{
       display: flex;
