--- a/www/assets/css/main.css
+++ b/www/assets/css/main.css
@@ -641,6 +641,259 @@ iframe {
   max-width: 100%;
   height: auto; }
 
+/*! fancyBox v2.1.5 fancyapps.com | fancyapps.com/fancybox/#license */
+.fancybox-wrap,
+.fancybox-skin,
+.fancybox-outer,
+.fancybox-inner,
+.fancybox-image,
+.fancybox-wrap iframe,
+.fancybox-wrap object,
+.fancybox-nav,
+.fancybox-nav span,
+.fancybox-tmp {
+  padding: 0;
+  margin: 0;
+  border: 0;
+  outline: none;
+  vertical-align: top; }
+
+.fancybox-wrap {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 8020; }
+
+.fancybox-skin {
+  position: relative;
+  background: #f9f9f9;
+  color: #444;
+  text-shadow: none;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  border-radius: 0.25rem; }
+
+.fancybox-opened {
+  z-index: 8030; }
+
+.fancybox-opened .fancybox-skin {
+  -webkit-box-shadow: 0 10px 25px rgba(0, 0, 0, 0.5);
+  -moz-box-shadow: 0 10px 25px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.5); }
+
+.fancybox-outer, .fancybox-inner {
+  position: relative; }
+
+.fancybox-inner {
+  overflow: hidden; }
+
+.fancybox-type-iframe .fancybox-inner {
+  -webkit-overflow-scrolling: touch; }
+
+.fancybox-error {
+  color: #444;
+  font: 14px/20px "Helvetica Neue",Helvetica,Arial,sans-serif;
+  font: 0.875rem/1.25rem "Helvetica Neue",Helvetica,Arial,sans-serif;
+  margin: 0;
+  padding: 15px;
+  padding: 0.9375rem;
+  white-space: nowrap; }
+
+.fancybox-image, .fancybox-iframe {
+  display: block;
+  width: 100%;
+  height: 100%; }
+
+.fancybox-image {
+  max-width: 100%;
+  max-height: 100%; }
+
+#fancybox-loading, .fancybox-close, .fancybox-prev span, .fancybox-next span {
+  background-image: url("fancybox_sprite.png"); }
+
+#fancybox-loading {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  margin-top: -22px;
+  margin-left: -22px;
+  background-position: 0 -108px;
+  opacity: 0.8;
+  cursor: pointer;
+  z-index: 8060; }
+
+#fancybox-loading div {
+  width: 44px;
+  width: 2.75rem;
+  height: 44px;
+  height: 2.75rem;
+  background: url("fancybox_loading.gif") center center no-repeat; }
+
+.fancybox-close {
+  position: absolute;
+  top: -18px;
+  top: -1.125rem;
+  right: -18px;
+  right: -1.125rem;
+  width: 36px;
+  width: 2.25rem;
+  height: 36px;
+  height: 2.25rem;
+  cursor: pointer;
+  z-index: 8040; }
+
+.fancybox-nav {
+  position: absolute;
+  top: 0;
+  width: 40%;
+  height: 100%;
+  cursor: pointer;
+  text-decoration: none;
+  background: transparent url("blank.gif");
+  /* helps IE */
+  -webkit-tap-highlight-color: transparent;
+  z-index: 8040; }
+
+.fancybox-prev {
+  left: 0; }
+
+.fancybox-next {
+  right: 0; }
+
+.fancybox-nav span {
+  position: absolute;
+  top: 50%;
+  width: 36px;
+  width: 2.25rem;
+  height: 34px;
+  height: 2.125rem;
+  margin-top: -18px;
+  cursor: pointer;
+  z-index: 8040;
+  visibility: hidden; }
+
+.fancybox-prev span {
+  left: 10px;
+  left: 0.625rem;
+  background-position: 0 -36px; }
+
+.fancybox-next span {
+  right: 10px;
+  right: 0.625rem;
+  background-position: 0 -72px; }
+
+.fancybox-nav:hover span {
+  visibility: visible; }
+
+.fancybox-tmp {
+  position: absolute;
+  top: -99999px;
+  top: -6249.9375rem;
+  left: -99999px;
+  left: -6249.9375rem;
+  visibility: hidden;
+  max-width: 99999px;
+  max-height: 99999px;
+  overflow: visible !important; }
+
+/* Overlay helper */
+.fancybox-lock {
+  overflow: hidden !important;
+  width: auto; }
+
+.fancybox-lock body {
+  overflow: hidden !important; }
+
+.fancybox-lock-test {
+  overflow-y: hidden !important; }
+
+.fancybox-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+  display: none;
+  z-index: 8010;
+  background: url("fancybox_overlay.png"); }
+
+.fancybox-overlay-fixed {
+  position: fixed;
+  bottom: 0;
+  right: 0; }
+
+.fancybox-lock .fancybox-overlay {
+  overflow: auto;
+  overflow-y: scroll; }
+
+/* Title helper */
+.fancybox-title {
+  visibility: hidden;
+  font: normal 13px/20px "Helvetica Neue",Helvetica,Arial,sans-serif;
+  font: normal 0.8125rem/1.25rem "Helvetica Neue",Helvetica,Arial,sans-serif;
+  position: relative;
+  text-shadow: none;
+  z-index: 8050; }
+
+.fancybox-opened .fancybox-title {
+  visibility: visible; }
+
+.fancybox-title-float-wrap {
+  position: absolute;
+  bottom: 0;
+  right: 50%;
+  margin-bottom: -35px;
+  z-index: 8050;
+  text-align: center; }
+
+.fancybox-title-float-wrap .child {
+  display: inline-block;
+  margin-right: -100%;
+  padding: 2px 20px;
+  padding: 0.125rem 1.25rem;
+  background: transparent;
+  /* Fallback for web browsers that doesn't support RGBa */
+  background: rgba(0, 0, 0, 0.8);
+  -webkit-border-radius: 15px;
+  -moz-border-radius: 15px;
+  border-radius: 15px;
+  border-radius: 0.9375rem;
+  text-shadow: 0 1px 2px #222;
+  color: #FFF;
+  font-weight: bold;
+  line-height: 24px;
+  line-height: 1.5rem;
+  white-space: nowrap; }
+
+.fancybox-title-outside-wrap {
+  position: relative;
+  margin-top: 10px;
+  color: #fff; }
+
+.fancybox-title-inside-wrap {
+  padding-top: 10px; }
+
+.fancybox-title-over-wrap {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  color: #fff;
+  padding: 10px;
+  padding: 0.625rem;
+  background: #000;
+  background: rgba(0, 0, 0, 0.8); }
+
+/*Retina graphics!*/
+@media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min--moz-device-pixel-ratio: 1.5), only screen and (min-device-pixel-ratio: 1.5) {
+  #fancybox-loading, .fancybox-close, .fancybox-prev span, .fancybox-next span {
+    background-image: url("fancybox_sprite@2x.png");
+    background-size: 44px 152px;
+    /*The size of the normal image, half the size of the hi-res image*/ }
+  #fancybox-loading div {
+    background-image: url("fancybox_loading@2x.gif");
+    background-size: 24px 24px;
+    /*The size of the normal image, half the size of the hi-res image*/ } }
+
 @font-face {
   font-family: 'excellenceinmotion_black';
   src: url("../fonts/excellenceinmotion_black_v4_h-webfont.eot");
@@ -1353,7 +1606,57 @@ h2 {
     margin-bottom: 0; }
 
 .reveal {
-  display: none; }
+  display: none;
+  width: 100%;
+  max-width: 75%;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  overflow: visible;
+  overflow-y: visible;
+  padding: 0;
+  border: none;
+  background-color: #000;
+  left: auto;
+  right: auto;
+  margin-left: auto;
+  margin-right: auto; }
+  .reveal .container {
+    width: 100%;
+    position: relative; }
+  .reveal .modal-close {
+    color: #fff;
+    position: absolute;
+    right: -40px;
+    right: -2.5rem;
+    top: -40px;
+    top: -2.5rem; }
+    .reveal .modal-close .content {
+      position: relative; }
+      .reveal .modal-close .content a {
+        height: 20px;
+        height: 1.25rem;
+        width: 20px;
+        width: 1.25rem;
+        display: block; }
+  .reveal .box-complex, .reveal .box-simple {
+    background: #fff;
+    border-top: 3px solid #ff0d0d;
+    border-top: 0.1875rem solid #ff0d0d;
+    max-height: 77vh;
+    padding: 40px 0;
+    padding: 2.5rem 0;
+    overflow-y: auto; }
+    .reveal .box-complex .box-head, .reveal .box-simple .box-head {
+      max-width: 81rem;
+      margin-left: auto;
+      margin-right: auto; }
+      .reveal .box-complex .box-head .box-head-left, .reveal .box-simple .box-head .box-head-left {
+        padding-left: .5rem;
+        padding-right: .5rem; }
 
 /* Header css
  ----------------------------------------------------------------------------------------------------*/
@@ -2884,7 +3187,9 @@ h2 {
   max-width: 487px;
   background: #fff;
   padding: 65px 55px 30px 80px;
-  padding: 4.0625rem 3.4375rem 1.875rem 5rem; }
+  padding: 4.0625rem 3.4375rem 1.875rem 5rem;
+  border-top: 6px solid #d2d944;
+  border-top: 0.375rem solid #d2d944; }
   .sidebar h2 {
     font-family: excellenceinmotion_bold;
     color: #051039;
@@ -2933,6 +3238,9 @@ h2 {
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex; }
+  .governance .sidebar {
+    border-top: 6px solid #a0e3f1;
+    border-top: 0.375rem solid #a0e3f1; }
   .governance .sub-content .governance-grid {
     display: flex;
     flex-wrap: wrap;
@@ -2986,6 +3294,9 @@ h2 {
 .keyfigures {
   padding: 60px 0;
   padding: 3.75rem 0; }
+  .keyfigures .sidebar {
+    border-top: 6px solid #d41923;
+    border-top: 0.375rem solid #d41923; }
   .keyfigures .sub-content {
     color: #fff;
     position: relative; }
@@ -3004,6 +3315,9 @@ h2 {
   background: #fff;
   padding: 109px 0;
   padding: 6.8125rem 0; }
+  .activities .sidebar {
+    border-top: 6px solid #f05428;
+    border-top: 0.375rem solid #f05428; }
   .activities .tabs-container .activities-list .content {
     padding: 62px 152px 60px 80px;
     padding: 3.875rem 9.5rem 3.75rem 5rem; }
@@ -3016,6 +3330,9 @@ h2 {
 .alliances {
   padding: 152px 0;
   padding: 9.5rem 0; }
+  .alliances .sidebar {
+    border-top: 6px solid #acc432;
+    border-top: 0.375rem solid #acc432; }
   .alliances-list .alliance-item {
     display: flex;
     margin: 0 -9px;
@@ -3095,6 +3412,9 @@ h2 {
   background: #fff;
   padding: 112px 0 90px;
   padding: 7rem 0 5.625rem; }
+  .awards .sidebar {
+    border-top: 6px solid #fdab34;
+    border-top: 0.375rem solid #fdab34; }
   .awards .sub-content .tabs-container .tabs-panel .slide {
     display: flex;
     flex-wrap: wrap;
@@ -3151,6 +3471,7 @@ h2 {
   min-height: 442px;
   background-size: cover;
   background-position: center center;
+  background-attachment: fixed;
   position: relative;
   border-bottom: 1px solid #fff;
   border-bottom: 0.0625rem solid #fff;
