update complexe page

--- a/scss/patterns/_awards.scss
+++ b/scss/patterns/_awards.scss
@@ -28,6 +28,9 @@
               max-width: 160px;
             }
           }
+          .reveal{
+            display: none;
+          }
         }
       }
     }
