--- a/scss/style.scss
+++ b/scss/style.scss
@@ -39,6 +39,7 @@
 @import "patterns/_alliiances";
 @import "patterns/_awards";
 @import "patterns/_sage";
+@import "patterns/_social";
 
 //Pages
 @import "pages/_404";
