--- a/scss/patterns/_complex_page_intro.scss
+++ b/scss/patterns/_complex_page_intro.scss
@@ -1,6 +1,6 @@
 .complex-page-intro{
   background: $white;
-  padding: 56px 0;
+  padding: 6px 0 47px;
   .field-name-body{
     max-width: 750px;
   }
