--- a/scss/patterns/_project_home.scss
+++ b/scss/patterns/_project_home.scss
@@ -62,8 +62,10 @@
       .project_title{
         font-size: 32px;
         font-family: $font-bold;
-        color:$navy-blue;
         margin-bottom: 2px;
+        a{
+          color:$navy-blue;
+        }
       }
       .content{
         line-height: 24px;
